bug 246280 trim trailing dots of files being downloaded before extension checking r=darin sr=jst